crates/swc_ecma_parser/tests/test262-error-references/fail/f0f16b655e08b92c.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/f0f16b655e08b92c.js:1:1
  |
1 | [x] += 0
  | ^^^

